[GSCOLLECT-1644] Implement CharSequence onCharAdapter, CodePointAdapter and CodePointList.
git-svn-id: svn+ssh://gscollections.svn.services.gs.com/svnroot/gscollections-svn/trunk@892 d5c9223b-1aff-41ac-aadd-f810b4a99ac4